Change width, fix size, align riight and add black border to analyze button

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -20,10 +20,6 @@ button {
   font: inherit;
 }
 
-textarea {
-  padding: 20px;
-}
-
 button {
   background-color: transparent;
   border: none;
@@ -50,6 +46,9 @@ h2 {
   color: #fff;
   padding: 5px 10px;
   width: 100px;
+  height: 40px;
+  align-self: self-end;
+  border: 1px solid black;
 }
 
 button:hover {
@@ -75,6 +74,7 @@ button:hover {
     color: #fff;
     font-size: 0.8rem;
     font-family: Consolas, monospace;
+    padding: 12px;
     border-radius: 20px;
   }
 }
